--- a/EOS/EOS.csproj
+++ b/EOS/EOS.csproj
@@ -32,9 +32,11 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>5</WarningLevel>
     <DocumentationFile>bin\Release\EOS.xml</DocumentationFile>
     <RegisterForComInterop>false</RegisterForComInterop>
+    <NoWarn>CS0419,CS1573</NoWarn>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
