--- a/EOS/packages.config
+++ b/EOS/packages.config
@@ -1,15 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MessagePack" version="2.5.192" targetFramework="net481" />
-  <package id="MessagePack.Annotations" version="2.5.192" targetFramework="net481" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net481" />
-  <package id="Microsoft.NET.StringTools" version="17.6.3" targetFramework="net481" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
-  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net481" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net481" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
-  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net481" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
-  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net481" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
+  <package id="MessagePack" version="3.1.4" targetFramework="net481" />
+  <package id="MessagePack.Annotations" version="3.1.4" targetFramework="net481" />
+  <package id="MessagePackAnalyzer" version="3.1.4" targetFramework="net481" developmentDependency="true" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.10" targetFramework="net481" />
+  <package id="Microsoft.NET.StringTools" version="17.14.28" targetFramework="net481" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net481" />
+  <package id="System.Collections.Immutable" version="9.0.10" targetFramework="net481" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net481" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net481" />
+  <package id="System.Reflection.Metadata" version="9.0.10" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net481" />
+  <package id="System.Text.Encoding.CodePages" version="9.0.10" targetFramework="net481" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net481" />
 </packages>
